--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -40,48 +40,38 @@
 <body class="ad-body">
 <div class="ad-container">
     <div class="ad-info">
-        <ul class="am-list am-list-static am-list-border">
-            <li>
-                <a class="ii-href" id="title-btn"></a>
-                <span class="am-badge ad-badge" id="title-text"></span>
-                <i class="am-icon-chevron-right"></i>
-                主题
-            </li>
-            <li>
-                <a class="ii-href" id="location-btn"></a>
-                <span class="am-badge ad-badge" id="location-text"></span>
-                <i class="am-icon-chevron-right"></i>
-                地点
-            </li>
-            <li>
-                <a class="ii-href" id="startTime-btn"></a>
-                <span class="am-badge ad-badge" id="startTime-text"></span>
-                <i class="am-icon-chevron-right"></i>
-                开始时间
-            </li>
-            <li>
-                <a class="ii-href" id="endTime-btn"></a>
-                <span class="am-badge ad-badge" id="endTime-text"></span>
-                <i class="am-icon-chevron-right"></i>
-                结束时间
-            </li>
-        </ul>
+        <div class="ad-title">
+            主题
+            <span class="am-badge ad-badge am-badge-danger" id="title-text"></span>
+            <a id="title-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+        </div>
+        <div class="ad-location">
+            地点
+            <span class="am-badge ad-badge am-badge-danger" id="location-text"></span>
+            <a id="location-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+        </div>
+        <div class="ad-start">
+            开始时间
+            <span class="am-badge ad-badge am-badge-danger" id="startTime-text"></span>
+            <a id="startTime-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+        </div>
+        <div class="ad-end">
+            结束时间
+            <span class="am-badge ad-badge am-badge-danger" id="endTime-text"></span>
+            <a id="endTime-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+        </div>
     </div>
     <div class="ad-info">
-        <ul class="am-list am-list-static am-list-border">
-            <li>
-                <a class="ii-href" id="partner-btn"></a>
-                <span class="am-badge ad-badge am-badge-danger" id="partner-text"></span>
-                <i class="am-icon-chevron-right"></i>
-                对象
-            </li>
-            <li>
-                <a class="ii-href" id="age-btn"></a>
-                <span class="am-badge ad-badge am-badge-danger" id="age-text"></span>
-                <i class="am-icon-chevron-right"></i>
-                年龄
-            </li>
-        </ul>
+        <div class="ad-partner">
+            对象
+            <span class="am-badge ad-badge am-badge-danger" id="partner-text"></span>
+            <a id="partner-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+        </div>
+        <div class="ad-age">
+            年龄
+            <span class="am-badge ad-badge am-badge-danger" id="age-text"></span>
+            <a id="age-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+        </div>
     </div>
     <div class="ad-info">
         <ul class="am-list am-list-static am-list-border">
