--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -37,18 +37,18 @@
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="main-body">
-<ul class="am-list am-list-static am-list-border main-list main-margin" id="main-list" style="margin-bottom: 30px">
-</ul>
-<div class="main-side-bar main-top-bar">
+<div id="main-list" class="main-list">
+</div>
+<div class="main-top-bar">
     <div class="am-g main-top">
-        <div class="am-u-sm-4"><span class="main-top-text">一起躁</span></div>
-        <div class="am-u-sm-4" style="color: grey"><a id="datingRequest" style="color:grey;display: block">躁友信息</a>
+        <div class="am-u-sm-3"><span class="main-top-text">一起躁</span></div>
+        <div class="am-u-sm-6" style="color: grey;"><a id="datingRequest" style="color:grey;display: block">躁友信息</a>
         </div>
-        <div class="am-u-sm-4" style="color: grey"><a id="individualInfo" style="color:grey;display: block">我的信息</a>
+        <div class="am-u-sm-3" style="color: grey;"><a id="individualInfo" style="color:grey;display: block">我的信息</a>
         </div>
     </div>
 </div>
-<div class="main-side-bar main-bottom-bar">
+<div class="main-bottom-bar">
     <a href="#" id="imgUrl" style="display: block">
         <img class="main-add" src="assets/i/add.png" id="imgAdd"/>
     </a>
@@ -69,93 +69,62 @@
 <script src="assets/js/handlebars.min.js"></script>
 <script src="assets/js/main.js"></script>
 <script type="text/x-handlebars-template" id="listBox">
-    {{#each this}}
-    <ul class="am-list am-list-static am-list-border main-list main-margin">
-        <li>
+    {{#each sportOrder}}
+    <ul class="am-list am-list-static am-list-border main-margin">
+        <li style="padding-left: 0px;padding-right: 0px;">
             <div class="main-container">
-                <div class="am-g main-g">
-                    <div class="am-u-sm-4 main-left">
-                        <div class="main-center">
-                            {{#if official}}
-                            <a href="officialInfo.html?orderId={{orderId}}"><img src="{{avatarUrl}}"
-                                                                                 class="am-radius main-radius"/></a>
-                            {{else}}
-                            <a href="timeLine.html?userId={{userId}}"><img src="{{avatarUrl}}"
-                                                                           class="am-radius main-radius"/></a>
-                            {{/if}}
-
-                            <div class="main-gray">
-                                {{#if official}}
-                                <div class="main-name" style="width: 100%">{{nickName}}
-                                    {{else}}
-                                    <div class="main-name am-text-truncate">{{nickName}}
-                                        <span>{{age}}岁</span>
-                                        {{/if}}
-                                        {{#if official}}
-                                        {{else}}
-                                        {{#compare sex}}
-                                        <p class="am-icon-smile-o main-boy"
-                                           style="padding-right: 15px;padding-left: 4.5px;"></p>
-                                        {{else}}
-                                        {{#judge sex}}
-                                        <p class="am-icon-mars main-boy"></p>
-                                        {{else}}
-                                        <p class="am-icon-venus main-girl"
-                                           style="padding-right: 13.5px;padding-left: 5.5px;"></p>
-                                        {{/judge}}
-                                        {{/compare}}
-                                        {{/if}}
-                                    </div>
-                                </div>
+                <div class="main-g">
+                    <div class="main-left">
+                        <div class="main-center ">
+                            <div class="main-avatar">
+                                <a href="timeLine.html?userId={{userId}}">
+                                    <img src="{{avatarUrl}}" style="height: 100px;width: 100px"/>
+                                </a>
                             </div>
-                        </div>
-                        <div class="am-u-sm-8 main-right">
-                            <div>
-                                <span class="main-item">{{sportName}}</span>
-                                <span class="main-item">单独约</span>
-                                <span class="main-start-time">{{startTime}}-{{endTime}}</span>
+                            <div class="main-gender">
+                                {{#compare sex}}
+                                <p class="am-icon-smile-o main-boy"
+                                   style="padding-right: 15px;padding-left: 4.5px;"></p>
+                                {{else}}
+                                {{#judge sex}}
+                                <p class="am-icon-mars main-boy"></p>
+                                {{else}}
+                                <p class="am-icon-venus main-girl"></p>
+                                {{/judge}}
+                                {{/compare}}
                             </div>
-                            <div class="main-location">地点：{{location}}</div>
-                            <div class="main-time">{{diffTime}} 前发布
-                                {{#if official}}
-                                <img src="assets/i/zaodong.jpg" class="main-logo"/>
-                                {{/if}}
-                            </div>
-                            <!--<div class="main-people">-->
-                                <!--<img src="assets/i/people.png"-->
-                                     <!--class="main-icon-people">-->
-                                <!--{{#if official}}-->
-                                <!--{{currentPeople}}人 | {{peopleCount}}人-->
-                                <!--{{else}}-->
-                                <!--<span>单独约</span>-->
-                                <!--{{/if}}-->
-                            <!--</div>-->
-
-                            <div>
-                                {{#each sports}}
-                                <img src="{{iconUrl}}" class="main-sports"/>
-                                {{/each}}
+                            <div class="main-info">
+                                <div class="main-name am-text-truncate">{{nickName}}</div>
+                                <div class="main-age">{{age}}岁</div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="main-container main-text-bottom">
-                    <div class="am-g main-g">
-                        <div class="am-u-sm-9 main-9">{{content}}</div>
-                        <div class="am-u-sm-3 main-3">
-                            <div class="main-button">
-                                {{#if enabled}}
-                                <button onclick="generateOrderCustomer('{{orderId}}')" type="button"
-                                        class="am-btn am-btn-success am-round am-btn-xs main-green" id="main-confirm">
-                                    一起躁
-                                </button>
-                                {{else}}
-                                <button type="button" class="am-btn am-btn-default am-round am-btn-xs"
-                                        disabled="disabled">来晚了
-                                </button>
-                                {{/if}}
-                            </div>
+                    <div class="main-right">
+                        <div class="main-yue">
+                            <span class="main-people">单独约</span>
+                            <span class="main-item">{{sportName}}</span>
+                            <span class="main-start-time">{{startTime}}-{{endTime}}</span>
+                            <!--<div class="main-people"><span>单独约</span></div>-->
+                            <!--<div class="main-item"><span>{{sportName}}</span></div>-->
+                            <!--<div class="main-start-time"><span>{{startTime}}-{{endTime}}</span></div>-->
                         </div>
+                        <div class="main-location">地点：{{location}}</div>
+                        <div class="main-time">{{diffTime}}前 发布</div>
+                        <div>
+                            {{#each sports}}
+                            <img src="{{iconUrl}}" class="main-sports"/>
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-text-bottom">
+                <div class="main-g">
+                    <div class="main-content">
+                        <span>{{content}}</span>
+                    </div>
+                    <div class="main-button">
+                        <button type="button" class="am-btn am-btn-success am-round am-btn-xs main-green">一起燥</button>
                     </div>
                 </div>
             </div>
