--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -124,7 +124,16 @@
                         <span>{{content}}</span>
                     </div>
                     <div class="main-button">
-                        <button type="button" class="am-btn am-btn-success am-round am-btn-xs main-green">一起燥</button>
+                        {{#if enabled}}
+                        <button onclick="generateOrderCustomer('{{orderId}}')" type="button"
+                                class="am-btn am-btn-success am-round am-btn-xs main-green" id="main-confirm">
+                            一起躁
+                        </button>
+                        {{else}}
+                        <button type="button" class="am-btn am-btn-default am-round am-btn-xs"
+                                disabled="disabled">来晚了
+                        </button>
+                        {{/if}}
                     </div>
                 </div>
             </div>
