--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -71,12 +71,26 @@
             <span class="am-badge ii-badge">{{nickName}}</span>
         </div>
         <div class="ii-tel">
+            <!--<img src="assets/i/required.png" style="height: 10px; width: 10px;margin-bottom: 3px;">-->
             手机号
+            <span style="color: grey;
+                        position: relative;
+                        top: 0px;
+                        left: 8px;
+                        font-size: 12.5px;">(必填)
+            </span>
             <span class="am-badge ii-badge am-badge-danger" id="text-tel">{{tel}}</span>
             <a class="" id="tel-btn"><i class="am-icon-chevron-right ii-arrows"></i> </a>
         </div>
         <div class="ii-weChat">
+            <!--<img src="assets/i/required.png" style="height: 10px; width: 10px;margin-bottom: 3px;">-->
             微信号
+            <span style="color: grey;
+                        position: relative;
+                        top: 0px;
+                        left: 8px;
+                        font-size: 12.5px;">(必填)
+            </span>
             <span class="am-badge ii-badge am-badge-danger" id="text-weChat">{{weChat}}</span>
             <a id="weChat-btn"><i class="am-icon-chevron-right ii-arrows"></i></a>
         </div>
