--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -35,10 +35,9 @@
 
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
+
 </head>
 <body class="main-body">
-<div id="main-list" class="main-list">
-</div>
 <div class="main-top-bar">
     <div class="am-g main-top">
         <div class="am-u-sm-3"><span class="main-top-text">一起躁</span></div>
@@ -48,6 +47,7 @@
         </div>
     </div>
 </div>
+<div id="main-list" class="main-list"></div>
 <div class="main-bottom-bar">
     <a href="#" id="imgUrl" style="display: block">
         <img class="main-add" src="assets/i/add.png" id="imgAdd"/>
