--- a/src/main/webapp/datingRequest.html
+++ b/src/main/webapp/datingRequest.html
@@ -35,6 +35,7 @@
 
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
+
 </head>
 <body class="dr-body">
 <div class="main-side-bar main-top-bar">
@@ -44,8 +45,39 @@
         <div class="am-u-sm-3" style="color: grey"><a id="individualInfo" style="color:grey;display: block">我的信息</a></div>
     </div>
 </div>
-<div id="dr-null" class="dr-null"></div>
-<div id="dr-main"></div>
+<div class="dr-tab">
+    <span onclick="tab(1)" style="border-bottom: 1px solid grey" id="span1">未处理</span>
+    /
+    <span onclick="tab(2)" id="span2">已处理</span>
+</div>
+<div>
+    <ul class="am-list am-list-static am-list-border" style="margin-top: 0;" id="tab1"></ul>
+    <ul class="am-list am-list-static am-list-border" style="margin-top: 0;display: none" id="tab2"></ul>
+</div>
+<div id="dr-null1" class="dr-null" style="display: inline"></div>
+<div id="dr-null2" class="dr-null" style="display: none"></div>
+
+<div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-bd" id="status">
+            拒绝成功！
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn">确定</span>
+        </div>
+    </div>
+</div>
+<div class="am-modal am-modal-alert" tabindex="-1" id="success-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-bd" id="success">
+            发布成功！
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn" onclick="toReload();">确定</span>
+        </div>
+    </div>
+</div>
+
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="assets/js/jquery.min.js"></script>
 <!--<![endif]-->
@@ -59,98 +91,73 @@
 <script src="assets/js/common.js"></script>
 <script src="assets/js/handlebars.min.js"></script>
 <script src="assets/js/datingRequest.js"></script>
-<script type="text/x-handlebars-template" id="request">
+<script type="text/x-handlebars-template" id="request1">
     {{#each this}}
-    <ul class="am-list am-list-static am-list-border dr-require-li">
-        <li>
-            <div class="am-container dr-require-list">
-                <div class="dr-background">
-                    {{#compare sex}}
-                    <img src="assets/i/user-background/background-girl.jpg" class="dr-background-img">
-                    {{else}}
-                    {{#judge sex}}
-                    <img src="assets/i/user-background/background-boy.jpg" class="dr-background-img">
-                    {{else}}
-                    <img src="assets/i/user-background/background-girl.jpg" class="dr-background-img">
-                    {{/judge}}
-                    {{/compare}}
+    <li>
+        <div class="dr-container">
+            <div class="dr-avatar">
+                <img src="{{avatar}}" class="am-radius" style="height: 110px;width: 110px">
+            </div>
+            <div class="dr-info">
+                <span class="am-text-truncate">{{nickName}}</span>
+                {{#compare sex}}
+                <b class="am-icon-smile-o dr-boy"></b>
+                {{else}}
+                {{#judge sex}}
+                <b class="am-icon-mars dr-boy"></b>
+                {{else}}
+                <b class="am-icon-venus dr-girl"></b>
+                {{/judge}}
+                {{/compare}}
+                <div>
+                    <span class="dr-age">{{age}}岁</span><span class="dr-city">上海市 {{city}}</span>
                 </div>
-                <div class="dr-avatar-info">
-                    <div class="dr-avatar">
-                        <a href="timeLine.html?userId={{customerId}}" class="dr-a">
-                            <img src="{{avatar}}" class="am-img-thumbnail dr-a">
-                        </a>
-                    </div>
-                    <div class="dr-name am-text-truncate">{{nickName}}</div>
-                    <div class="dr-info"><span>{{age}}岁</span> {{city}}
-                        {{#compare sex}}
-                        <span class="am-icon-smile-o dr-boy"></span>
-                        {{else}}
-                        {{#judge sex}}
-                        <span class="am-icon-mars dr-boy"></span>
-                        {{else}}
-                        <span class="am-icon-venus dr-girl"></span>
-                        {{/judge}}
-                        {{/compare}}
-                    </div>
-                    {{#ifNull agree}}
-                    <div class="am-g dr-conform-button">
-                        <div class="am-u-sm-6">
-                            <button onclick="responseCustomer(0,'{{orderCId}}')" type="button"
-                                    class="am-btn am-btn-success am-round am-btn-xs">残忍拒绝
-                            </button>
-                        </div>
-                        <div class="am-u-sm-6">
-                            <button onclick="responseCustomer(1,'{{orderCId}}')" type="button"
-                                    class="am-btn am-btn-danger am-round am-btn-xs">同意约炼
-                            </button>
-                        </div>
-                    </div>
-                    {{else}}
-                    <div class="am-g dr-conform-button"></div>
-                    {{#if agree}}
-                    {{#compare sex}}
-                    <img src="assets/i/request-02.png" class="dr-request">
-                    <img src="assets/i/blue.png" class="dr-bottom">
-                    {{else}}
-                    {{#judge sex}}
-                    <img src="assets/i/request-02.png" class="dr-request">
-                    <img src="assets/i/blue.png" class="dr-bottom">
-                    {{else}}
-                    <img src="assets/i/request-03.png" class="dr-request">
-                    <img src="assets/i/pick.png" class="dr-bottom">
-                    {{/judge}}
-                    {{/compare}}
-                    {{else}}
-                    <img src="assets/i/request-01.png" class="dr-request">
-                    <img src="assets/i/grey.png" class="dr-bottom">
-                    {{/if}}
-                    {{/ifNull}}
+                <div class="dr-span">请求加入你的夜跑活动</div>
+            </div>
+        </div>
+        <div class="dr-conform-button">
+            <div class="am-g" style="padding-left: 5px;padding-right: 5px;padding-bottom: 5px">
+                <div class="am-u-sm-6" style="padding: 0">
+                    <button class="am-btn dr-btu-left" onclick="responseCustomer(0,'{{orderCId}}')">残忍拒绝</button>
+                </div>
+                <div class="am-u-sm-6" style="padding: 0">
+                    <button class="am-btn dr-btu-right" onclick="responseCustomer(1,'{{orderCId}}')">同意约炼</button>
                 </div>
             </div>
-        </li>
-    </ul>
+        </div>
+    </li>
     {{/each}}
-    <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
-        <div class="am-modal-dialog">
-            <div class="am-modal-bd" id="status">
-                拒绝成功！
+</script>
+<script type="text/x-handlebars-template" id="request2">
+    {{#each this}}
+    <li>
+        <div class="dr-container">
+            <div class="dr-avatar">
+                <img src="{{avatar}}" class="am-radius" style="height: 110px;width: 110px">
             </div>
-            <div class="am-modal-footer">
-                <span class="am-modal-btn">确定</span>
+            <div class="dr-info">
+                <span class="am-text-truncate">{{nickName}}</span>
+                {{#compare sex}}
+                <b class="am-icon-smile-o dr-boy"></b>
+                {{else}}
+                {{#judge sex}}
+                <b class="am-icon-mars dr-boy"></b>
+                {{else}}
+                <b class="am-icon-venus dr-girl"></b>
+                {{/judge}}
+                {{/compare}}
+                <div>
+                    <span class="dr-age">{{age}}岁</span><span class="dr-city">上海市 {{city}}</span>
+                </div>
+                {{#if agree}}
+                <div class="dr-span" style="color:#6dcfaa">已接受</div>
+                {{else}}
+                <div class="dr-span">已接受</div>
+                {{/if}}
             </div>
         </div>
-    </div>
-    <div class="am-modal am-modal-alert" tabindex="-1" id="success-alert">
-        <div class="am-modal-dialog">
-            <div class="am-modal-bd" id="success">
-                发布成功！
-            </div>
-            <div class="am-modal-footer">
-                <span class="am-modal-btn" onclick="toReload();">确定</span>
-            </div>
-        </div>
-    </div>
+    </li>
+    {{/each}}
 </script>
 </body>
 </html>
