--- a/src/main/webapp/datingRequest.html
+++ b/src/main/webapp/datingRequest.html
@@ -115,7 +115,7 @@
                 <div>
                     <span class="dr-age">{{age}}岁</span><span class="dr-city">上海市 {{city}}</span>
                 </div>
-                <div class="dr-span">请求加入你的夜跑活动</div>
+                <div class="dr-span">请求加入你发起的活动</div>
             </div>
         </div>
         <div class="dr-conform-button">
