--- a/src/main/webapp/joinMember.html
+++ b/src/main/webapp/joinMember.html
@@ -70,7 +70,8 @@
 <section class="am-container jm-content">
     <h2 class="jm-title" style="padding-bottom: 10px">[收费标准]</h2>
 
-    <div>收费标准：299元／月
+    <div>收费标准：
+        299元／月
         <a class="am-icon-square-o" id="check-box1"></a>
         899元／季
         <a class="am-icon-check-square-o" id="check-box2"></a>
@@ -79,7 +80,7 @@
     </div>
     <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
     <div><i class="am-icon-calendar" style="padding-right: 5px"></i> <span
-            style="color: #006600">2015-09-10至2015-12-10</span></div>
+            style="color: #006600">2015-09-10 至 2015-12-10</span></div>
     <div><i class="am-icon-cny" style="padding-right: 13px;padding-left: 2px"></i> 600元／季 <span
             class="jm-span">在线预付</span></div>
 </section>
