--- a/src/main/webapp/healthManage.html
+++ b/src/main/webapp/healthManage.html
@@ -43,49 +43,67 @@
     <ul class="am-slides">
         <li>
             <img src="http://s.amazeui.org/media/i/demos/bing-1.jpg">
-
         </li>
         <li>
             <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg">
-
         </li>
         <li>
             <img src="http://s.amazeui.org/media/i/demos/bing-3.jpg">
-
         </li>
         <li>
             <img src="http://s.amazeui.org/media/i/demos/bing-4.jpg">
-
         </li>
     </ul>
 </header>
 <section class="am-container jm-content">
-    <h2 class="jm-title" style="padding-top: 15px">[入会须知]</h2>
+    <h2 class="jm-title" style="padding-top: 15px">[测试须知]</h2>
     <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
     <span>
     月费会员299元，活动地点卢湾体育馆、静安体育馆中午12:00-13:00，晚上6:00-7:00，含免费人体成分、骨密度检测。季度会费899元，免费更换拍线，含免费人体成分、骨密度、运动有氧能力检测及一年复测。年度会员3599元，含入门级球拍、运动毛巾，全年免费更换拍线，含免费人体成分、骨密度检测及免费运动处方开具一次。
     </span>
 </section>
 <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
-<section class="am-container jm-content">
-    <h2 class="jm-title" style="padding-bottom: 10px">[收费标准]</h2>
 
-    <div>收费标准：299元／月
-        <a class="am-icon-square-o" id="check-box1"></a>
-        899元／季
-        <a class="am-icon-check-square-o" id="check-box2"></a>
-        599元／年
-        <a class="am-icon-square-o" id="check-box3"></a>
+<section class="am-container jm-content">
+    <h2 class="jm-title">[测试项目]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
+    <div>
+        <span style="padding-right: 5px">骨密度测试 <i id="test-box1" class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">人体成份分析 <i id="test-box2" class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">运动有氧能力 <i id="test-box3" class="am-icon-square-o"></i></span>
     </div>
-    <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
-    <div><i class="am-icon-calendar" style="padding-right: 5px"></i> <span
-            style="color: #006600">2015-09-10至2015-12-10</span></div>
-    <div><i class="am-icon-cny" style="padding-right: 13px;padding-left: 2px"></i> 600元／季 <span
-            class="jm-span">在线预付</span></div>
 </section>
+
+<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
+
+<section class="am-container jm-content">
+    <h2 class="jm-title">[定制须知]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
+    <span>
+
+        adfadfasdfasdfs
+    </span>
+</section>
+
+<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
+
+<section class="am-container jm-content">
+    <h2 class="jm-title">[个性化项目]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
+    <div>
+        <span style="padding-right: 5px">健康处方 <i class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">运动处方 <i class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">心理咨询 <i class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">音乐理疗 <i class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">基因测试 <i class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">康护保健 <i class="am-icon-square-o"></i></span>
+    </div>
+</section>
+
+<div class="am-form-group am-container jm-content">
+    <textarea style="width: 100%;resize: none" rows="5" id="doc-ta-1" placeholder="如有额外需求，请再次备注说明"></textarea>
+</div>
+
 <hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>
 <div class="jm-btn">
-    <button class="am-btn am-btn-secondary" data-am-modal="{target: '#my-alert'}">我要入会</button>
+    <button class="am-btn am-btn-secondary" data-am-modal="{target: '#my-alert'}">健康定制</button>
 </div>
 
 <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
@@ -102,9 +120,9 @@
 
 <script>
     $(document).ready(function () {
-        var box1 = $('#check-box1');
-        var box2 = $('#check-box2');
-        var box3 = $('#check-box3');
+        var box1 = $('#test-box1');
+        var box2 = $('#test-box2');
+        var box3 = $('#test-box3');
         box1.click(function () {
             box1.alterClass("am-icon-square-o", "am-icon-check-square-o");
             box2.alterClass("am-icon-check-square-o", "am-icon-square-o");
