--- a/src/main/webapp/joinMember.html
+++ b/src/main/webapp/joinMember.html
@@ -42,19 +42,15 @@
 <header data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{"directionNav":false}'>
     <ul class="am-slides">
         <li>
-            <img src="http://s.amazeui.org/media/i/demos/bing-1.jpg">
+            <img src="./i/banner1.png">
 
         </li>
         <li>
-            <img src="http://s.amazeui.org/media/i/demos/bing-2.jpg">
+            <img src="./i/banner2.png">
 
         </li>
         <li>
-            <img src="http://s.amazeui.org/media/i/demos/bing-3.jpg">
-
-        </li>
-        <li>
-            <img src="http://s.amazeui.org/media/i/demos/bing-4.jpg">
+            <img src="./i/banner3.png">
 
         </li>
     </ul>
