--- a/src/main/webapp/myHealth.html
+++ b/src/main/webapp/myHealth.html
@@ -34,16 +34,46 @@
     <meta name="msapplication-TileColor" content="#0e90d2">
 
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
-    <link rel="stylesheet" href="assets/css/app.css">
-
+    <link rel="stylesheet" href="assets/css/static.css">
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/amazeui.min.js"></script>
 </head>
-<body class="main-body">
-<div class="main-top-bar">
-    <div class="am-g main-top">
-        <div class="am-u-sm-3"><a id="#mh01" class="main-top-text">健康测试</a></div>
-        <div class="am-u-sm-6" style="color: grey;"><a id="#mh02" style="color:grey;display: block">线上问诊</a>
+<body>
+<div data-am-widget="tabs" class="am-tabs am-tabs-d2" style="margin: 0;">
+    <ul class="am-tabs-nav am-cf">
+        <li class="am-active"><a href="[data-tab-panel-0]">健康测试</a></li>
+        <li class=""><a href="[data-tab-panel-1]">线上问诊</a></li>
+        <li class=""><a href="[data-tab-panel-2]">健康定制</a></li>
+    </ul>
+    <div class="am-tabs-bd">
+        <div data-tab-panel-0 class="am-g am-tab-panel am-active">
+            <div class="am-u-sm-8">
+                订单号：PO51031001
+                <span style="display: block;font-size: 11px;">预约时间：2015-09-28 09:45</span>
+            </div>
+            <div class="am-u-sm-4">
+                <button class="am-icon-download"
+                        style="border: none;background-color: white;margin: 0 auto;display: block;font-size: 18px"
+                        data-am-modal="{target: '#my-alert'}"></button>
+                <span style="display: block;font-size: 11px">下载健康报告</span>
+            </div>
         </div>
-        <div class="am-u-sm-3" style="color: grey;"><a id="#mh03" style="color:grey;display: block">健康定制</a>
+        <div data-tab-panel-1 class="am-tab-panel " style="text-align: center">
+            该功能正在开发中，敬请期待！
+        </div>
+        <div data-tab-panel-2 class="am-tab-panel " style="text-align: center">
+            该功能正在开发中，敬请期待！
+        </div>
+    </div>
+</div>
+<div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-hd">奇羽记</div>
+        <div class="am-modal-bd">
+            很抱歉，该功能还在开发中，敬请期待！
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn">确定</span>
         </div>
     </div>
 </div>
